# PyRigidBody

./: README.md  build-docs.sh  build_docs.sh  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  python-package.yml
docs/: Marker.md  RigidBody.md
docs/docstrings/: Marker.md  README.md  RigidBody.md  __init__.py.md
src/: Link.py  Marker.py  RigidBody.py  Skeleton.py  __init__.py  usage.py
tests/: test_Marker.py  test_Marker_edge_cases.py  test_RigidBody.py  test_RigidBody_edge_cases.py
